--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ASSIGNMENT 3 – Letizia Dell'Oro</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css?v=9">
+  <script src="sketch.js?v=9"></script>
+
 
   <!-- p5 -->
   <script src="libraries/p5.min.js"></script>
@@ -79,4 +81,6 @@ Terrestrial and submarine volcanoes are scaled by magnitude, regardless of sign.
   <!-- sketch -->
   <script src="sketch.js"></script>
 </body>
+
+
 </html>
