--- a/index.html
+++ b/index.html
@@ -55,16 +55,21 @@
 
     </section>
 
-    <section class="card">
-      <h3>VOLCANO TYPES (CIRCLE GLYPHS)</h3>
-      <ul class="legend">
-        <li><span class="dot"></span>Stratovolcano / Somma</li>
-        <li><span class="ring"></span>Caldera / Maar / Tuff</li>
-        <li><span class="target"></span>Cones (Cinder, Scoria, ...)</li>
-        <li><span class="pie"></span>Crater / Complex / Fields / Fissures</li>
-        <li><span class="halo"></span>Shield / Subglacial / Submarine</li>
-        <li><span class="other"></span>Others (Dome, Fumarole, ...)</li>
-      </ul>
+   <section class="card">
+  <h3>VOLCANO TYPES (GLYPHS)</h3>
+  <ul class="legend">
+    <li><span class="g circle"></span>Stratovolcano / Somma</li>
+    <li><span class="g triangle"></span>Shield</li>
+    <li><span class="g square"></span>Volcanic field / Fissures</li>
+    <li><span class="g ring"></span>Caldera / Maar / Tuff</li>
+    <li><span class="g pentagon"></span>Complex / Compound</li>
+    <li><span class="g cross"></span>Submarine / Subglacial</li>
+    <li><span class="g rect"></span>Pyroclastic & Cinder cones</li>
+    <li><span class="g star"></span>Lava dome</li>
+    <li><span class="g oval"></span>Crater / Others</li>
+  </ul>
+</section>
+
       <p class="muted tiny">• Size = absolute elevation (|m|).
 Terrestrial and submarine volcanoes are scaled by magnitude, regardless of sign.</p>
       
